added 2 html projct files and made the initial structure

--- a/creatives-around.html
+++ b/creatives-around.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Post Name</title>
+	<title>Creatives Around</title>
 
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
@@ -38,7 +38,7 @@
 		</a>
 
 		<ul id="navigation">
-			<li><a href="index.html#contact">Contact</a></li>
+			<li><a href="index.html">Home</a></li>
 
 		</ul>
 	</div>
