added images and content to pet-adoption-app.html

--- a/pet-adoption-app.html
+++ b/pet-adoption-app.html
@@ -46,23 +46,24 @@
 	<div class="main-container">
 		<br>
 
-		<div class="img-container">
-			<img src="/images/p-a_a.png">
-		</div>
+		<!-- <div class="img-container">
+			<img src="/images/adopt_me_logo.png">
+		</div> -->
 		
 		<h3>Adopt-Me! - A pet adoption app.</h3>
 
-		<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque, at!
+		<p>Adopt Me is a React app that searches for adoptable pets.
 		<br>
 		<br>
-		Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus fuga repellat harum excepturi, maxime modi officia animi nulla! Nobis, obcaecati.
+		The App fetches data from a public API to prompt the results and contact of the pet owners.
+		<br>
+		<br>
+        The App was created along with the frontend masters course "Complete Intro to React v5" by Brian Holt.
 
-		<br>
-		<br>
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, hic!		<br>
-		<br>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem, aspernatur.		<br>
-		<br>
+        I chose to participate in this course to practice the React eco system. Including hooks, effects, context, Reach router and portals.
+        
+        <br>
+        <br>
 		</p>
 
 		<h5>Technologies:</h5>
@@ -70,25 +71,28 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem, aspernatur.		
 			<li>- React</li>
 			<li>- HTML</li>
 			<li>- CSS</li>
-			<li>- </li>
-			<li>- </li>
-			<li>- </li>
-			<li>- </li>
-			<li>- </li>
+
 		</ul>
 
 
-		<h5>Lorem ipsum dolor sit amet.</h5>
+		<h5>Adopt Me! - Homepage</h5>
 		<div class="img-container">
-			<img >
+			<img src="/images/AdoptMe_hompage.png">
 		</div>
 
-		<h6>Lorem ipsum dolor sit amet.</h5>
+		<h6>Adopt Me! - Pet details.</h5>
 		<div class="img-container">
-			<img >
+			<img src="/images/AdoptMe_Pet.png">
 		</div>
+        <h6>Adopt Me! - Modal</h5>
+        <div class="img-container">
+            <img src="/images/AdoptMe_Modal.png">
+        </div>
+            <h6>Adopt Me! - Pet contact details</h5>
+        <div class="img-container">
+            <img src="/images/AdoptMe_Petfinder_url2.png">
+        </div>
 
-		
 	</div>
 
 </body>
