added grid to creatives around images

--- a/creatives-around.html
+++ b/creatives-around.html
@@ -1,117 +1,120 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Creatives Around</title>
+  <head>
+    <title>Creatives Around</title>
 
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1"
+    />
 
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap"
+      rel="stylesheet"
+    />
 
-	<link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap"
+      rel="stylesheet"
+    />
 
-	<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="default.css" />
 
-	<link rel="stylesheet" type="text/css" href="default.css">
+    <style type="text/css">
+      .img-container {
+        max-width: 600px;
+      }
 
+      img {
+        width: 100%;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="nav-wrapper">
+      <!-- Link around dots-wrapper added after tutorial video -->
+      <a href="index.html">
+        <div class="dots-wrapper">
+          <div id="dot-1" class="browser-dot"></div>
+          <div id="dot-2" class="browser-dot"></div>
+          <div id="dot-3" class="browser-dot"></div>
+        </div>
+      </a>
 
-	<style type="text/css">
-		.img-container{
-			max-width: 600px;
-		}
+      <ul id="navigation">
+        <li><a href="index.html">Home</a></li>
+      </ul>
+    </div>
 
-		img{
-			width: 100%
-		}
+    <div class="main-container">
+      <br />
 
-	</style>
+      <div class="img-container">
+        <img src="/images/ca_redpurplelogo.png" />
+      </div>
 
-</head>
-<body>
-	<div class="nav-wrapper">
+      <p>
+        This project was done in a team as part of the final project at DCI.
+        <br />
+        <br />
+        Creatives Around location-based social platform for visual artists. The
+        idea of the app is to connect with other visual artists that are in your
+        area. The app suggests profiles based on location and art forms. Once
+        the connection is confirmed by both sides, direct messaging between the
+        users is available and the users are added as a connection.
 
-		<!-- Link around dots-wrapper added after tutorial video -->
-		<a href="index.html">
-			<div class="dots-wrapper">
-				<div id="dot-1" class="browser-dot"></div>
-				<div id="dot-2" class="browser-dot"></div>
-				<div id="dot-3" class="browser-dot"></div>
-			</div>
-		</a>
+        <br />
+        <br />
+        The mission of the app is to hold space for visual artists, from various
+        fields and levels of skill, to connect - inspire one another - and
+        collaborate.
+        <br />
+        <br />
+        The app suggests profiles based on location and art forms. Once the
+        connection is confirmed by both sides, direct messaging between the
+        users is available and the users are added as a connection.
+        <br />
+        <br />
+      </p>
 
-		<ul id="navigation">
-			<li><a href="index.html">Home</a></li>
+      <h5>Technologies:</h5>
+      <ul>
+        <li>- React</li>
+        <li>- HTML</li>
+        <li>- CSS</li>
+        <li>- Bootstrap</li>
+      </ul>
 
-		</ul>
-	</div>
+      <div class="c-a-images-container">
+        <div class="img-container">
+          <img class="creatives-around-image" src="images/profile_page.png" />
+        </div>
 
-	<div class="main-container">
-		<br>
+        <div class="img-container">
+          <img
+            class="creatives-around-image"
+            src="images/search_profiles_page.png"
+          />
+        </div>
 
-		<div class="img-container">
-			<img src="/images/ca_redpurplelogo.png">
-		</div>
-		
-		<h3>Creatives Around</h3>
+        <div class="img-container">
+          <img
+            class="creatives-around-image"
+            src="images/location_settings_page.png"
+          />
+        </div>
 
-		<p>This was a project I did during my studies at DCI as the final project. Unfortunatelly the backend developer dropped off due to dutied he had at work. so the backend is yet to be completed.
-		<br>
-		<br>
-		Here is a short description of the idea: 
-		Creatives Around location-based social platform for visual artists.
+        <div class="img-container">
+          <img
+            class="creatives-around-image"
+            src="images/connections_page.png"
+          />
+        </div>
 
-The idea of the app is to connect with other visual artists that are in your area. 
-
-The app suggests profiles based on location and art forms. Once the connection is confirmed by both sides, direct messaging between the users is available and the users are added as a connection.
-
-
-		<br>
-		<br>
-		The mission of the app is to hold space for visual artists, from various fields and levels of skill, to connect - inspire one another - and collaborate.
-		<br>
-		<br>
-		The app suggests profiles based on location and art forms. Once the connection is confirmed by both sides, direct messaging between the users is available and the users are added as a connection.
-		<br>
-		<br>
-		</p>
-
-		<h5>Technologies:</h5>
-		<ul>
-			<li>- React</li>
-			<li>- HTML</li>
-			<li>- CSS</li>
-			<li>- Bootstrap</li>
-			<li>- </li>
-			<li>- </li>
-			<li>- </li>
-			<li>- </li>
-		</ul>
-
-
-		<h5>The Profile Page</h5>
-		<div class="img-container">
-			<img src="images/profile_page.png">
-		</div>
-
-		<h6>Search Profile Page</h5>
-		<div class="img-container">
-			<img src="images/search_profiles_page.png">
-		</div>
-
-		<h5>Location Settings</h5>
-		<div class="img-container">
-			<img src="images/location_settings_page.png">
-		</div>
-
-		<h5>Connections Page</h5>
-		<div class="img-container">
-			<img src="images/connections_page.png">
-		</div>
-
-		<h5>The Chat</h5>
-		<div class="img-container">
-			<img src="images/message_page.png">
-		</div>
-
-	</div>
-
-</body>
+        <div class="img-container">
+          <img class="creatives-around-image" src="images/message_page.png" />
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
