--- a/creatives-around.html
+++ b/creatives-around.html
@@ -57,11 +57,12 @@
         This project was done in a team as part of the final project at DCI.
         <br />
         <br />
-        Creatives Around location-based social platform for visual artists. The
-        idea of the app is to connect with other visual artists that are in your
-        area. The app suggests profiles based on location and art forms. Once
-        the connection is confirmed by both sides, direct messaging between the
-        users is available and the users are added as a connection.
+        Creatives Around is a location-based social platform for visual artists.
+        The idea of the app is to connect with other visual artists that are in
+        your area and discover the local art community. The app suggests
+        profiles based on location and art forms. Once the connection is
+        confirmed by both sides, direct messaging between the users is available
+        and the users are added as a connection.
 
         <br />
         <br />
@@ -70,9 +71,8 @@
         collaborate.
         <br />
         <br />
-        The app suggests profiles based on location and art forms. Once the
-        connection is confirmed by both sides, direct messaging between the
-        users is available and the users are added as a connection.
+        our backend developer dropped off during the project and we currently
+        are looking for a backend developer to join this project.
         <br />
         <br />
       </p>
@@ -113,6 +113,13 @@
 
         <div class="img-container">
           <img class="creatives-around-image" src="images/message_page.png" />
+        </div>
+
+        <div class="img-container">
+          <img
+            class="creatives-around-image"
+            src="images/middle_of_profile2.png"
+          />
         </div>
       </div>
     </div>
