added styles for creatives around page

--- a/creatives-around.html
+++ b/creatives-around.html
@@ -23,6 +23,7 @@
     <style type="text/css">
       .img-container {
         max-width: 600px;
+        margin-bottom: 3rem;
       }
 
       img {
@@ -58,8 +59,8 @@
         <br />
         <br />
         Creatives Around is a location-based social platform for visual artists.
-        The idea of the app is to connect with other visual artists that are in
-        your area and discover the local art community. The app suggests
+        The idea of the app is to connect with other visual artists in close
+        proximity and discover the local art community. The app suggests
         profiles based on location and art forms. Once the connection is
         confirmed by both sides, direct messaging between the users is available
         and the users are added as a connection.
@@ -77,14 +78,14 @@
         <br />
       </p>
 
-      <h5>Technologies:</h5>
+      <h5>Technologies</h5>
       <ul>
         <li>- React</li>
         <li>- HTML</li>
         <li>- CSS</li>
         <li>- Bootstrap</li>
       </ul>
-
+      <h5>App preview</h5>
       <div class="c-a-images-container">
         <div class="img-container">
           <img class="creatives-around-image" src="images/profile_page.png" />
