added description for the to do page and added media query for creatives around page

--- a/to-do-app.html
+++ b/to-do-app.html
@@ -45,7 +45,10 @@
         The ToDo app is an app for documenting daily tasks.
         <br />
         <br />
-        This is a one page App that saves the users input the local storage.
+        This is a one page React App that was done using create-react-app. The
+        app saves the users input to their browsers local storage so the status
+        of the tasks are saved even if they close the browser.
+
         <br />
         <br />
       </p>
