--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </div>
 
           <div class="left-column">
-            <img id="profile_pic" src="images/Mor_photo.JPG" />
+            <img id="profile_pic" src="images/Mor_photo_web-photo.JPG" />
             <h5 style="text-align: center;line-height: 0;">
               Personalize Theme
             </h5>
