added nav links and styled the social links section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="intro-wrapper">
           <div class="nav-wrapper">
             <!-- Link around dots-wrapper added after tutorial video -->
-            <a href="index.html">
+            <a href="index.html#social-links">
               <div class="dots-wrapper">
                 <div id="dot-1" class="browser-dot"></div>
                 <div id="dot-2" class="browser-dot"></div>
@@ -43,7 +43,7 @@
             </a>
 
             <ul id="navigation">
-              <li><a href="index.html#contact">Frontend web developer</a></li>
+              <li><a href="index.html#social-links">Contact</a></li>
             </ul>
           </div>
 
@@ -112,7 +112,7 @@
             <h4>SKILLS</h4>
 
             <p>
-              Frontend developer with primary focus on JavaScript + React:
+              Frontend web developer with a primary focus on JavaScript + React:
               <a target="_blank" href="my_resume.pdf">Download Resume</a>
             </p>
 
@@ -135,9 +135,9 @@
             </div>
           </div>
 
-          <div class="social-links">
+          <div id="social-links" class="social-links">
             <img id="social_img" src="images/follow.png" />
-            <h3>Find me on Github & Linkedin</h3>
+            <h3 class="find_me_title">Find me on Github & Linkedin</h3>
             <div class="social_icons">
               <a href="https://github.com/mor-solomonov">
                 <i class="fab fa-github"></i
