added a tag to creatives around github

--- a/creatives-around.html
+++ b/creatives-around.html
@@ -17,6 +17,10 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
+    />
 
     <link rel="stylesheet" type="text/css" href="default.css" />
   </head>
@@ -44,9 +48,8 @@
       </div>
 
       <p>
-        This project was done in a team as part of the final project at DCI.
         <br />
-        <br />
+
         Creatives Around is a location-based social platform for visual artists.
         The idea of the app is to connect with other visual artists in close
         proximity and discover the local art community. The app suggests
@@ -61,8 +64,9 @@
         collaborate.
         <br />
         <br />
-        our backend developer dropped off during the project and we currently
-        are looking for a backend developer to join this project.
+        This project was done in a team as part of the final project at DCI. Our
+        backend developer dropped off during the project and we currently are
+        looking for a backend developer to join this project.
         <br />
         <br />
       </p>
@@ -74,6 +78,12 @@
         <li>- CSS</li>
         <li>- Bootstrap</li>
       </ul>
+      <h5>GitHub Project Repository</h5>
+
+      <a href="https://github.com/mor-solomonov/creatives-around-frontend">
+        <i class="fab fa-github github-projects"></i
+      ></a>
+
       <h5>App preview</h5>
       <div class="c-a-images-container">
         <div class="img-container">
