added a tag fot pet adoption app, removed an image and changed headers

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
             <hr />
 
-            <h4>SKILLS</h4>
+            <h4>Skills</h4>
 
             <p>
               Frontend web developer with a primary focus on JavaScript + React:
