--- a/pet-adoption-app.html
+++ b/pet-adoption-app.html
@@ -1,88 +1,97 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Pet adoption app</title>
+  <head>
+    <title>Pet adoption app</title>
 
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1"
+    />
 
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap"
+      rel="stylesheet"
+    />
 
-	<link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap"
+      rel="stylesheet"
+    />
 
-	<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="default.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
+    />
+  </head>
+  <body>
+    <div class="nav-wrapper">
+      <!-- Link around dots-wrapper added after tutorial video -->
+      <a href="index.html">
+        <div class="dots-wrapper">
+          <div id="dot-1" class="browser-dot"></div>
+          <div id="dot-2" class="browser-dot"></div>
+          <div id="dot-3" class="browser-dot"></div>
+        </div>
+      </a>
 
-	<link rel="stylesheet" type="text/css" href="default.css">
+      <ul id="navigation">
+        <li><a href="index.html">Home</a></li>
+      </ul>
+    </div>
 
+    <div class="main-container">
+      <br />
 
-</head>
-<body>
-	<div class="nav-wrapper">
-
-		<!-- Link around dots-wrapper added after tutorial video -->
-		<a href="index.html">
-			<div class="dots-wrapper">
-				<div id="dot-1" class="browser-dot"></div>
-				<div id="dot-2" class="browser-dot"></div>
-				<div id="dot-3" class="browser-dot"></div>
-			</div>
-		</a>
-
-		<ul id="navigation">
-			<li><a href="index.html">Home</a></li>
-
-		</ul>
-	</div>
-
-	<div class="main-container">
-		<br>
-
-		<!-- <div class="img-container">
+      <!-- <div class="img-container">
 			<img src="/images/adopt_me_logo.png">
 		</div> -->
-		
-		<h3>Adopt-Me! - A pet adoption app.</h3>
 
-		<p>Adopt Me is a React app that searches for adoptable pets.
-		<br>
-		<br>
-		The App fetches data from a public API to prompt the results and contact of the pet owners.
-		<br>
-		<br>
-        The App was created along with the frontend masters course "Complete Intro to React v5" by Brian Holt.
+      <h3>ADOPT ME - A pet adoption app.</h3>
+      <br />
+      <p>
+        Adopt Me is a React app that searches for adoptable pets.
+        <br />
+        <br />
+        The App fetches data from a public API to prompt the results and contact
+        of the pet owners.
+        <br />
+        <br />
+        The App was created along with the frontend masters course "Complete
+        Intro to React v5" by Brian Holt. I chose to participate in this course
+        to practice the React eco system. Including hooks, effects, context,
+        Reach router and portals.
 
-        I chose to participate in this course to practice the React eco system. Including hooks, effects, context, Reach router and portals.
-        
-        <br>
-        <br>
-		</p>
+        <br />
+        <br />
+      </p>
 
-		<h5>Technologies:</h5>
-		<ul>
-			<li>- React</li>
-			<li>- HTML</li>
-			<li>- CSS</li>
+      <h5>Technologies:</h5>
+      <ul>
+        <li>- React</li>
+        <li>- HTML</li>
+        <li>- CSS</li>
+      </ul>
+      <h5>GitHub Project Repository</h5>
 
-		</ul>
+      <a href="https://github.com/mor-solomonov/pet-adoption-app">
+        <i class="fab fa-github github-projects"></i
+      ></a>
+      <h5>App Preview</h5>
 
+      <h6>Homepage</h6>
+      <div class="img-container">
+        <img src="/images/AdoptMe_hompage.png" />
+      </div>
 
-		<h5>Adopt Me! - Homepage</h5>
-		<div class="img-container">
-			<img src="/images/AdoptMe_hompage.png">
-		</div>
-
-		<h6>Adopt Me! - Pet details.</h5>
-		<div class="img-container">
-			<img src="/images/AdoptMe_Pet.png">
-		</div>
-        <h6>Adopt Me! - Modal</h5>
-        <div class="img-container">
-            <img src="/images/AdoptMe_Modal.png">
-        </div>
-            <h6>Adopt Me! - Pet contact details</h5>
-        <div class="img-container">
-            <img src="/images/AdoptMe_Petfinder_url2.png">
-        </div>
-
-	</div>
-
-</body>
+      <h6>Pet details.</h6>
+      <div class="img-container">
+        <img src="/images/AdoptMe_Pet.png" />
+      </div>
+      <h6>Pet contact details</h6>
+      <div class="img-container">
+        <img src="/images/AdoptMe_Petfinder_url2.png" />
+      </div>
+    </div>
+  </body>
 </html>
