added a tag and style to to do app page

--- a/to-do-app.html
+++ b/to-do-app.html
@@ -17,7 +17,10 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap"
       rel="stylesheet"
     />
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
+    />
     <link rel="stylesheet" type="text/css" href="default.css" />
   </head>
   <body>
@@ -42,6 +45,7 @@
       <h3>To Do App</h3>
 
       <p>
+        <br />
         The ToDo app is an app for documenting daily tasks.
         <br />
         <br />
@@ -61,6 +65,11 @@
         <li>- SASS</li>
         <li>- bootstrap</li>
       </ul>
+      <h5>GitHub Project Repository</h5>
+
+      <a href="https://github.com/mor-solomonov/React-ToDo-App">
+        <i class="fab fa-github github-projects"></i
+      ></a>
 
       <h5>App preview</h5>
       <div class="img-container">
