added styles and repository link for pet adoption app

--- a/pet-adoption-app.html
+++ b/pet-adoption-app.html
@@ -73,24 +73,18 @@
         <li>- CSS</li>
       </ul>
       <h5>GitHub Project Repository</h5>
-
       <a href="https://github.com/mor-solomonov/pet-adoption-app">
         <i class="fab fa-github github-projects"></i
       ></a>
       <h5>App Preview</h5>
-
-      <h6>Homepage</h6>
-      <div class="img-container">
+      <div class="img-container adopt_me_images">
         <img src="/images/AdoptMe_hompage.png" />
       </div>
-
-      <h6>Pet details.</h6>
-      <div class="img-container">
+      <div class="img-container adopt_me_images">
         <img src="/images/AdoptMe_Pet.png" />
       </div>
-      <h6>Pet contact details</h6>
-      <div class="img-container">
-        <img src="/images/AdoptMe_Petfinder_url2.png" />
+      <div class="img-container adopt_me_images">
+        <img src="/images/adopt_me_contact.png" />
       </div>
     </div>
   </body>
