--- a/to-do-app.html
+++ b/to-do-app.html
@@ -72,8 +72,8 @@
       ></a>
 
       <h5>App preview</h5>
-      <div class="img-container">
-        <img src="images/To_Do_App.png" />
+      <div class="img-container ">
+        <img class="todo-image" src="images/To_Do_App.png" />
       </div>
     </div>
   </body>
