chnages intro text

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
 
             <p id="settings-note">
-              *Theme settings will be saved for<br />your next vist
+              *Theme settings will be saved for<br />your next visit
             </p>
           </div>
 
@@ -72,8 +72,7 @@
                 <div id="corner-tr" class="corner"></div>
                 <h3>What I Do</h3>
                 <p>
-                  I was an IT expert that made a career change to a Frontend web
-                  developer.
+                  I was an IT expert and now I'm a Frontend web developer.
                 </p>
                 <div id="corner-br" class="corner"></div>
                 <div id="corner-bl" class="corner"></div>
@@ -136,6 +135,7 @@
                 <li>Linux</li>
               </ul>
             </div>
+
             <!-- <img id="social_img" src="images/follow.png" /> -->
             <!-- <h3 class="find_me_title">Find me on Github & Linkedin</h3>
             <div class="social_icons">
