changed skills order and added media queriesfor mobile

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           </div>
 
           <div id="social-links" class="social-links">
-            <h4>Skills</h4>
+            <h4 class="skills_title">SKILLS</h4>
 
             <p>
               Frontend web developer with a primary focus on JavaScript + React:
@@ -124,15 +124,14 @@
                 <li>CSS</li>
                 <li>JavaScript</li>
                 <li>React</li>
-                <li>IT Systems</li>
+                <li>SASS</li>
               </ul>
 
               <ul>
-                <li>SASS</li>
                 <li>Bootstrap</li>
-                <li>Project Management</li>
                 <li>Photoshop</li>
                 <li>Linux</li>
+                <li>IT Systems</li>
               </ul>
             </div>
 
@@ -204,9 +203,10 @@
     <footer>
       <ul>
         <li>
-          <a class="social-icons" href="https://github.com/mor-solomonov">
-            <i class="fab fa-github fa-sm"></i
-          ></a>
+          <span>
+            <a class="social-icons" href="https://github.com/mor-solomonov">
+              <i class="fab fa-github fa-sm"></i></a
+          ></span>
         </li>
         <li>
           <a
