aligned footer items and added media queries for footer

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           </div>
 
           <div id="social-links" class="social-links">
-            <h4 class="skills_title">SKILLS</h4>
+            <h4 class="skills_title">Skills</h4>
 
             <p>
               Frontend web developer with a primary focus on JavaScript + React:
