added footer to creatives around page

--- a/creatives-around.html
+++ b/creatives-around.html
@@ -123,5 +123,27 @@
         </div>
       </div>
     </div>
+    <footer>
+      <ul>
+        <li>
+          <span>
+            <a class="social-icons" href="https://github.com/mor-solomonov">
+              <i class="fab fa-github fa-sm"></i></a
+          ></span>
+        </li>
+        <li>
+          <a
+            class="social-icons"
+            href="https://www.linkedin.com/in/mor-solomonov-254a27127/"
+            ><i class="fab fa-linkedin fa-sm"></i
+          ></a>
+        </li>
+        <li>
+          <a class="social-icons" href="mailto:mor.solomonov@gmail.com?"
+            ><i class="far fa-envelope fa-sm"></i
+          ></a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
