added footer to adopt me and to do app

--- a/index.html
+++ b/index.html
@@ -205,19 +205,19 @@
         <li>
           <span>
             <a class="social-icons" href="https://github.com/mor-solomonov">
-              <i class="fab fa-github fa-sm"></i></a
+              <i class="fab fa-github"></i></a
           ></span>
         </li>
         <li>
           <a
             class="social-icons"
             href="https://www.linkedin.com/in/mor-solomonov-254a27127/"
-            ><i class="fab fa-linkedin fa-sm"></i
+            ><i class="fab fa-linkedin"></i
           ></a>
         </li>
         <li>
           <a class="social-icons" href="mailto:mor.solomonov@gmail.com?"
-            ><i class="far fa-envelope fa-sm"></i
+            ><i class="far fa-envelope"></i
           ></a>
         </li>
       </ul>
