--- a/pet-adoption-app.html
+++ b/pet-adoption-app.html
@@ -47,14 +47,14 @@
 			<img src="/images/adopt_me_logo.png">
 		</div> -->
 
-      <h3>ADOPT ME - A pet adoption app.</h3>
+      <h3>Adopt Me!</h3>
       <br />
       <p>
         Adopt Me is a React app that searches for adoptable pets.
         <br />
         <br />
-        The App fetches data from a public API to prompt the results and contact
-        of the pet owners.
+        The App fetches data from a public API to find the pictures and location
+        of the pets along with the contact details of the pet owners.
         <br />
         <br />
         The App was created along with the frontend masters course "Complete
@@ -72,17 +72,41 @@
         <li>- HTML</li>
         <li>- CSS</li>
       </ul>
-      <h5>GitHub Project Repository</h5>
+      <h5>GitHub Project Repository:</h5>
       <a href="https://github.com/mor-solomonov/pet-adoption-app">
         <i class="fab fa-github github-projects"></i
       ></a>
-      <h5>App Preview</h5>
-      <div class="img-container adopt_me_images">
-        <img src="/images/AdoptMe_hompage.png" />
-      </div>
-      <div class="img-container adopt_me_images">
-        <img src="/images/AdoptMe_Pet.png" />
+      <h5>App Preview:</h5>
+      <div class="adopt-me-images">
+        <div class="img-container adopt_me_images">
+          <img src="/images/AdoptMe_hompage.png" />
+        </div>
+        <div class="img-container adopt_me_images">
+          <img src="/images/AdoptMe_Pet.png" />
+        </div>
       </div>
     </div>
+    <footer>
+      <ul>
+        <li>
+          <span>
+            <a class="social-icons" href="https://github.com/mor-solomonov">
+              <i class="fab fa-github "></i></a
+          ></span>
+        </li>
+        <li>
+          <a
+            class="social-icons"
+            href="https://www.linkedin.com/in/mor-solomonov-254a27127/"
+            ><i class="fab fa-linkedin "></i
+          ></a>
+        </li>
+        <li>
+          <a class="social-icons" href="mailto:mor.solomonov@gmail.com?"
+            ><i class="far fa-envelope "></i
+          ></a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
