--- a/to-do-app.html
+++ b/to-do-app.html
@@ -76,5 +76,27 @@
         <img class="todo-image" src="images/To_Do_App.png" />
       </div>
     </div>
+    <footer>
+      <ul>
+        <li>
+          <span>
+            <a class="social-icons" href="https://github.com/mor-solomonov">
+              <i class="fab fa-github fa-sm"></i></a
+          ></span>
+        </li>
+        <li>
+          <a
+            class="social-icons"
+            href="https://www.linkedin.com/in/mor-solomonov-254a27127/"
+            ><i class="fab fa-linkedin fa-sm"></i
+          ></a>
+        </li>
+        <li>
+          <a class="social-icons" href="mailto:mor.solomonov@gmail.com?"
+            ><i class="far fa-envelope fa-sm"></i
+          ></a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
