added width style to progect main container

--- a/pet-adoption-app.html
+++ b/pet-adoption-app.html
@@ -40,7 +40,7 @@
       </ul>
     </div>
 
-    <div class="main-container">
+    <div class="main-container main-container-projects">
       <br />
 
       <!-- <div class="img-container">
