--- a/to-do-app.html
+++ b/to-do-app.html
@@ -39,7 +39,7 @@
       </ul>
     </div>
 
-    <div class="main-container">
+    <div class="main-container main-container-projects">
       <br />
 
       <h3>To Do App</h3>
