changes some description text for all pages

--- a/creatives-around.html
+++ b/creatives-around.html
@@ -51,17 +51,17 @@
         <br />
 
         Creatives Around is a location-based social platform for visual artists.
-        The idea of the app is to connect with other visual artists in close
-        proximity and discover the local art community. The app suggests
-        profiles based on location and art forms. Once the connection is
-        confirmed by both sides, direct messaging between the users is available
-        and the users are added as a connection.
-
-        <br />
-        <br />
         The mission of the app is to hold space for visual artists, from various
         fields and levels of skill, to connect - inspire one another - and
         collaborate.
+        <br />
+        <br />
+
+        The idea of the app is to connect with other visual artists in close
+        proximity. The app suggests profiles based on location and art forms.
+        Once the connection is confirmed by both sides, direct messaging between
+        the users is available and the users are added as a connection.
+
         <br />
         <br />
         This project was done in a team as part of the final project at DCI. Our
