--- a/pet-adoption-app.html
+++ b/pet-adoption-app.html
@@ -53,14 +53,14 @@
         Adopt Me is a React app that searches for adoptable pets.
         <br />
         <br />
-        The App fetches data from a public API to find the pictures and location
-        of the pets along with the contact details of the pet owners.
+        With this app the user can browse through adoptable pets and get their
+        owners contact details.
         <br />
         <br />
         The App was created along with the frontend masters course "Complete
         Intro to React v5" by Brian Holt. I chose to participate in this course
-        to practice the React eco system. Including hooks, effects, context,
-        Reach router and portals.
+        to practice the React eco system. That includes react hooks, effects,
+        context, Reach router and portals.
 
         <br />
         <br />
