--- a/to-do-app.html
+++ b/to-do-app.html
@@ -46,13 +46,13 @@
 
       <p>
         <br />
-        The ToDo app is an app for documenting daily tasks.
+        An app for documenting daily tasks.
         <br />
         <br />
-        This is a one page React App that was done using create-react-app. The
-        app saves the users input to their browsers local storage so the status
-        of the tasks are saved even if they close the browser.
-
+        The ToDo app is a one page React App that was build using
+        create-react-app. The app saves the users input to their browsers local
+        storage so the status of the tasks are saved even if they close the
+        browser.
         <br />
         <br />
       </p>
