added min-height for todo page

--- a/to-do-app.html
+++ b/to-do-app.html
@@ -50,9 +50,9 @@
         <br />
         <br />
         The ToDo app is a one page React App that was build using
-        create-react-app. The app saves the users input to their browsers local
-        storage so the status of the tasks are saved even if they close the
-        browser.
+        create-react-app. The app saves the users input to the local storage of
+        the browser so that the state will be saved for the next time the
+        website is opened.
         <br />
         <br />
       </p>
