added styles for containers accourding to the fixed footer

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </a>
 
             <ul id="navigation">
-              <li><a href="index.html#social-links">Contact</a></li>
+              <li><a href="index.html#my-projects">Projects</a></li>
             </ul>
           </div>
 
@@ -152,7 +152,7 @@
 
     <section class="s1">
       <div class="main-container">
-        <h3 class="projects-title" style="text-align: center;">
+        <h3 class="projects-title" id="my-projects" style="text-align: center;">
           Some of my past projects
         </h3>
 
