changed adopt me project to github finer project

--- a/github-finder.html
+++ b/github-finder.html
@@ -47,20 +47,21 @@
 			<img src="/images/adopt_me_logo.png">
 		</div> -->
 
-      <h3>Adopt Me!</h3>
+      <h3>Github Finder</h3>
       <br />
       <p>
-        Adopt Me is a React app that searches for adoptable pets.
+        The Github Finder is a React app that searches for Github profiles aand
+        their profile details.
         <br />
         <br />
-        With this app the user can browse through adoptable pets and get their
-        owners contact details.
+        The app searches for the keyword in the username and the bio and once
+        the profile is selected the app navigates to a new page and shows most
+        of the users details like, location, latest public repositories,
+        hireable status.
+
         <br />
         <br />
-        The App was created along with the frontend masters course "Complete
-        Intro to React v5" by Brian Holt. I chose to participate in this course
-        to practice the React eco system. That includes react hooks, effects,
-        context, Reach router and portals.
+        The app connects to the Github API to fetch all the user data.
 
         <br />
         <br />
@@ -73,16 +74,16 @@
         <li>- CSS</li>
       </ul>
       <h5>GitHub Project Repository:</h5>
-      <a href="https://github.com/mor-solomonov/pet-adoption-app">
+      <a href="https://github.com/mor-solomonov/Github-Finder">
         <i class="fab fa-github github-projects"></i
       ></a>
       <h5>App Preview:</h5>
       <div class="adopt-me-images">
         <div class="img-container adopt_me_images">
-          <img src="/images/AdoptMe_hompage.png" />
+          <img src="/images/github__finder.png" />
         </div>
         <div class="img-container adopt_me_images">
-          <img src="/images/AdoptMe_Pet.png" />
+          <img src="/images/githubfinder_user.png" />
         </div>
       </div>
     </div>
