added font family to cards and corrected typo

--- a/github-finder.html
+++ b/github-finder.html
@@ -50,7 +50,7 @@
       <h3>Github Finder</h3>
       <br />
       <p>
-        The Github Finder is a React app that searches for Github profiles aand
+        The Github Finder is a React app that searches for Github profiles and
         their profile details.
         <br />
         <br />
