--- a/index.html
+++ b/index.html
@@ -124,11 +124,10 @@
                 <li>CSS</li>
                 <li>JavaScript</li>
                 <li>React</li>
-                <li>SASS</li>
               </ul>
 
               <ul>
-                <li>Bootstrap</li>
+                <li>Sass</li>
                 <li>Photoshop</li>
                 <li>Linux</li>
                 <li>IT Systems</li>
