changed style for gihub project icon and added text in h5

--- a/creatives-around.html
+++ b/creatives-around.html
@@ -78,13 +78,13 @@
         <li>- CSS</li>
         <li>- Bootstrap</li>
       </ul>
-      <h5>GitHub Project Repository</h5>
+      <h5>GitHub Project Repository:</h5>
 
       <a href="https://github.com/mor-solomonov/creatives-around-frontend">
         <i class="fab fa-github github-projects"></i
       ></a>
 
-      <h5>App preview</h5>
+      <h5>App preview:</h5>
       <div class="c-a-images-container">
         <div class="img-container">
           <img class="creatives-around-image" src="images/profile_page.png" />
