--- a/to-do-app.html
+++ b/to-do-app.html
@@ -62,16 +62,16 @@
         <li>- React</li>
         <li>- HTML</li>
         <li>- CSS</li>
-        <li>- SASS</li>
-        <li>- bootstrap</li>
+        <li>- Sass</li>
+        <li>- Bootstrap</li>
       </ul>
-      <h5>GitHub Project Repository</h5>
+      <h5>GitHub Project Repository:</h5>
 
       <a href="https://github.com/mor-solomonov/React-ToDo-App">
         <i class="fab fa-github github-projects"></i
       ></a>
 
-      <h5>App preview</h5>
+      <h5>App preview:</h5>
       <div class="img-container ">
         <img class="todo-image" src="images/To_Do_App.png" />
       </div>
