removed unused image and changed text for h5's

--- a/to-do-app.html
+++ b/to-do-app.html
@@ -71,7 +71,7 @@
         <i class="fab fa-github github-projects"></i
       ></a>
 
-      <h5>App preview:</h5>
+      <h5>App Preview:</h5>
       <div class="img-container ">
         <img class="todo-image" src="images/To_Do_App.png" />
       </div>
