--- a/creatives-around.html
+++ b/creatives-around.html
@@ -84,7 +84,7 @@
         <i class="fab fa-github github-projects"></i
       ></a>
 
-      <h5>App preview:</h5>
+      <h5>App Preview:</h5>
       <div class="c-a-images-container">
         <div class="img-container">
           <img class="creatives-around-image" src="images/profile_page.png" />
