added external website links for all project pages

--- a/creatives-around.html
+++ b/creatives-around.html
@@ -83,6 +83,9 @@
       <a href="https://github.com/mor-solomonov/creatives-around-frontend">
         <i class="fab fa-github github-projects"></i
       ></a>
+      <a href="https://nicsolitom.github.io/creatives-around-mobile/">
+        <i class="fas fa-external-link-alt external-link"></i
+      ></a>
 
       <h5>App Preview:</h5>
       <div class="c-a-images-container">
