--- a/github-finder.html
+++ b/github-finder.html
@@ -77,6 +77,10 @@
       <a href="https://github.com/mor-solomonov/Github-Finder">
         <i class="fab fa-github github-projects"></i
       ></a>
+      <a href="https://github-finder-dpz40ppqx.vercel.app">
+        <i class="fas fa-external-link-alt external-link"></i
+      ></a>
+
       <h5>App Preview:</h5>
       <div class="adopt-me-images">
         <div class="img-container adopt_me_images">
