--- a/to-do-app.html
+++ b/to-do-app.html
@@ -65,10 +65,13 @@
         <li>- Sass</li>
         <li>- Bootstrap</li>
       </ul>
-      <h5>GitHub Project Repository:</h5>
+      <h5>GitHub Project Repository and Website:</h5>
 
       <a href="https://github.com/mor-solomonov/React-ToDo-App">
         <i class="fab fa-github github-projects"></i
+      ></a>
+      <a href="https://react-todo-app.morsolomonov.vercel.app/">
+        <i class="fas fa-external-link-alt external-link"></i
       ></a>
 
       <h5>App Preview:</h5>
