added media queries for mobile

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <div class="main-container">
         <div class="about-wrapper">
           <div class="about-me">
-            <h4>More about me</h4>
+            <h4 class="aboutme-title">More about me</h4>
 
             <p>
               Having 7+ years of experience in different IT fields such as
