changed about me text

--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
             <p>
               Having 7+ years of experience in different IT fields such as
               Network and System Administration I continue my career as a
-              Frontend Web Developer to persue my passion for coding and design.
+              Frontend Web Developer to pursue my passion for coding and design.
             </p>
             <p>
-              I have recently completed a 1 year full-stack web development
-              course at Digital Career Institute - Berlin, that prepared me to
+              I have recently completed a 1-year full-stack web development
+              course at Digital Career Institute - Berlin, which prepared me to
               start a job as a developer.
             </p>
 
